# Tantrix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Create-Solution.cmd  README.md  Tantrix.sln
QtAdditions/: CMakeLists.txt
QtAdditions/include/dak/QtAdditions/: QtUtilities.h
QtAdditions/src/: QtUtilities.cpp
Tantrix/: Tantrix.cpp  Tantrix.vcxproj  Tantrix.vcxproj.filters  color.h  direction.cpp  direction.h  position.cpp  position.h  puzzle.cpp  puzzle.h  solution.cpp  solution.h  solve.cpp  solve.h  stream.cpp  tantrix.h  tantrix_stream.h  tile.cpp  tile.h
Tantrix/include/dak/tantrix/: any_shape_puzzle.h  triangle_puzzle.h
Tantrix/src/: any_shape_puzzle.cpp  triangle_puzzle.cpp
TantrixSolver/: Genius Puzzle Red Blue.txt  Genius Puzzle Yellow Tiles.txt  TantrixSolver.cpp  TantrixSolver.vcxproj  TantrixSolver.vcxproj.filters
six_eight/: CMakeLists.txt
six_eight/include/dak/six_eight/: direction.h  position.h  puzzle.h  six_eight.h  solution.h  stream.h  tile.h
six_eight/src/: direction.cpp  position.cpp  puzzle.cpp  solution.cpp  stream.cpp  tile.cpp
six_eight_solver/: CMakeLists.txt
six_eight_solver/puzzles/: 6x8 8 m q Q s d 3 f.txt  6x8 A u F l i n y s.txt  6x8 J A F Q 7 S d h.txt  6x8 J m Q u R j S k.txt  6x8 Q v d m F R y f.txt  6x8 Y a s k u S W v.txt  6x8 a b l d f g h i.txt  6x8 a m j v Q u s $.txt  6x8 d i m A Q 5 2 9.txt  6x8 d j G u 6 Y 3 1.txt  6x8 f F m J S w K s.txt  6x8 j F G m l d t s.txt  6x8 j H c X E k u m.txt  6x8 j J m Q n f l 3.txt  6x8 j u r R 2 n d 8.txt  6x8 m 8 j S l Q I W.txt  6x8 m j c J q X u N.txt  6x8 m q f p I 7 F (.txt  6x8 m r R d a N k u.txt  6x8 m u Q A f w d !.txt  6x8 m u R B q X Y f.txt  6x8 p r i F v l w Q.txt  6x8 puzzles.txt  6x8 r i g u R h 7 d.txt  6x8 r n q h o p u I.txt  6x8 s S I N Y p l r.txt  6x8 u j J 9 q N S Z.txt  6x8 v J m q Q 4 s u.txt  Puzzles.txt
six_eight_solver/src/: six_eight_solver.cpp
six_eight_tests/: CMakeLists.txt
six_eight_tests/include/dak/six_eight_tests/: helpers.h
six_eight_tests/src/: direction_tests.cpp  position_tests.cpp  solution_tests.cpp  solve_tests.cpp  tile_tests.cpp
tantrix/: CMakeLists.txt
tantrix/include/dak/tantrix/: any_shape_puzzle.h  color.h  direction.h  position.h  puzzle.h  solution.h  solve.h  stream.h  tantrix.h  tile.h  triangle_puzzle.h
tantrix/src/: any_shape_puzzle.cpp  direction.cpp  position.cpp  puzzle.cpp  solution.cpp  solve.cpp  stream.cpp  tile.cpp  triangle_puzzle.cpp
tantrix_solver/: CMakeLists.txt
tantrix_solver/puzzles/: Crazy Tantrix Puzzle Blue.txt  Crazy Tantrix Puzzle Red.txt  Crazy Tantrix Puzzle Yellow.txt  Extreme Puzzle Blue.txt  Extreme Puzzle Green Yellow.txt  Extreme Puzzle Red Loop.txt  Extreme Puzzle Red.txt  Genius Puzzle Red Yellow.txt  Junior Puzzle.txt  Master Puzzle With 0 Hole.txt  Master Puzzle With 1 Hole.txt  Master Puzzle With 2 Filled Holes.txt  Master Puzzle With 2 Holes.txt  Master Puzzle.txt  Numbers Blue Puzzle.txt  Numbers Green Puzzle.txt  Numbers Red Puzzle.txt  Numbers White Puzzle.txt  Numbers Yellow Puzzle.txt  Professor Puzzle.txt  Pyramid Puzzle 1.txt  Pyramid Puzzle 2.txt  Pyramid Puzzle 3.txt  Student Puzzle.txt
tantrix_solver/src/: tantrix_solver.cpp
tantrix_solver_app/: CMakeLists.txt
tantrix_solver_app/include/: draw_six_eight_puzzle.h  draw_tantrix_puzzle.h  main_window.h  puzzle_api.h  six_eight_puzzle.h  six_eight_puzzle_api.h  tantrix_puzzle.h  tantrix_puzzle_api.h
tantrix_solver_app/resources/: resource.h  resource.rc
tantrix_solver_app/src/: draw_six_eight_puzzle.cpp  draw_tantrix_puzzle.cpp  main_window.cpp  six_eight_puzzle.cpp  tantrix_puzzle.cpp  tantrix_solver_app.cpp
tantrix_tests/: CMakeLists.txt  tantrix_color_tests.cpp  tantrix_direction_tests.cpp  tantrix_position_tests.cpp  tantrix_solution_tests.cpp  tantrix_tests.vcxproj  tantrix_tests.vcxproj.filters  tantrix_tests_helpers.h  tantrix_tile_tests.cpp
tantrix_tests/include/dak/tantrix_tests/: helpers.h
tantrix_tests/src/: color_tests.cpp  direction_tests.cpp  position_tests.cpp  solution_tests.cpp  solve_tests.cpp  tile_tests.cpp
utility/: CMakeLists.txt
utility/include/dak/utility/: all.h  multi_thread_progress.h  progress.h  provider.h  stopwatch.h  stream_progress.h  thread_pool.h  thread_provider.h  threaded_work.h  worker.h
utility/src/: multi_thread_progress.cpp  progress.cpp  stopwatch.cpp  stream_progress.cpp  thread_pool.cpp  thread_provider.cpp
utility_tests/: CMakeLists.txt
utility_tests/src/: multi_thread_progress_tests.cpp  progress_tests.cpp  stopwatch_tests.cpp  stream_progress_tests.cpp  thread_pool_tests.cpp  threaded_work_tests.cpp
